<resources>
    <string name="app_name">SwaggApp</string>
    <string name="swagg_app">Swagg App</string>
    <string name="goto_random_faction">Get a random faction</string>
    <string name="title_activity_random_faction">RandomFaction</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="randomize">Randomize</string>
    <string name="one_piece_scans">One Piece Scans</string>
    <string name="scan_container">Scan container</string>
    <string name="prev">Prev</string>
    <string name="enter_scan_number">Enter scan number</string>
    <string name="go">GO</string>
    <string name="scan_list">Scan List</string>
    <string name="display_text">Display Text</string>
    <string name="n">N°</string>
</resources>
